task1/policies/test-latest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: latest-test
spec:
  containers:
  - name: nginx
    image: nginx:latest
