task1/policies/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: no-latest-tag
      match:
        any:
        - resources:
            kinds:
            - Pod

      validate:
        message: "Using the latest tag is not allowed."

        pattern:
          spec:
            containers:
            - image: "!*:latest"
