task1/policies/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: no-privileged
      match:
        any:
        - resources:
            kinds:
            - Pod

      validate:
        message: "Privileged containers are not allowed."

        pattern:
          spec:
            containers:
            - securityContext:
                =(privileged): false
